manifest/envoy.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
  labels:
    app: envoy
spec:
  type: ClusterIP
  ports:
    - name: admin
      port: 9901
      targetPort: 9901
    - name: to-fastapi
      port: 10001
      targetPort: 10001
  selector:
    app: envoy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  labels:
    app: envoy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
        - name: envoy
          image: nakanoi/envoy:latest
          ports:
            - containerPort: 9901
            - containerPort: 10001
---
