manifest/fastapi.yaml
# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: fastapi
#   labels:
#     name: fastapi
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  # namespace: fastapi
  labels:
    app: fastapi
spec:
  type: ClusterIP
  ports:
    - name: fastapi
      port: 8080
      targetPort: 8080
  selector:
    app: fastapi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  # namespace: fastapi
  labels:
    app: fastapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: nakanoi/fastapi:latest
          ports:
            - containerPort: 8080
          # resources:
          #   limits:
          #     cpu: "1024Mi"
          #     memory: "1000m"
          #   requests:
          #     cpu: "1024Mi"
          #     memory: "1000m"
---
